amended home controller

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../assets/ico/favicon.png">
 
-    <title>The Noob Joobs</title>
+    <title>The Noob Jobs</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap.css" rel="stylesheet">
@@ -29,7 +29,7 @@
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="head">
-    	<h1>The Noob Joobs</h1>
+    	<h1>The Noob Jobs</h1>
     </div>
 
     <div class="container">
