--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,7 +6,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Bandstand</a>
+          <a class="navbar-brand" href="#">The Noob Jobs</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -21,4 +21,4 @@
           </ul>
         </div><!--/.navbar-collapse -->
       </div>
-    </div>
+</div>
