--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= content_for?(:title) ? yield(:title) : "Bandstand" %></title>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Bandstand" %>">
+    <link href='http://fonts.googleapis.com/css?family=Black+Ops+One' rel='stylesheet' type='text/css'>
     <%= stylesheet_link_tag "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
@@ -11,12 +12,11 @@
   </head>
   <body class="<%= controller_name %> <%= action_name %>">
     <div class="container">
-    <div class="navbar navbar-fixed-top">
+    
         
           <%= render 'layouts/navigation' %>
         
     </div>
-  </div>
     <div id="main" role="main">
       <div class="container">
         <div class="content">
