--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -3,7 +3,7 @@ body { padding-top: 60px; }
 @import "bootstrap-responsive";
 
 body {
-  background-color: #fff;
+  background-color: #000;
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
@@ -29,6 +29,7 @@ p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
+  color: #999;
 }
 
 pre {
@@ -89,4 +90,36 @@ div {
 
 .head h1 {
 	text-align: center;
+	font-family: 'Black Ops One', cursive;
+  color: #fff;
+}
+
+.profile h3 {
+  font-family: 'Black Ops One', cursive;
+  color: #fff;
+}
+
+.front-page h2 {
+	font-family: 'Bangers', cursive;
+  color: orange;
+}
+
+.navbar-brand {
+	font-family: 'Black Ops One', cursive;
+}
+
+.front-image {
+	width: 250px;
+}
+
+.front-box {
+	border:3px solid;
+	border-radius:15px;
+	border-color: orange;
+	padding:10px 10px 10px 10px;
+	box-shadow: 10px 10px 5px #888888;
+}
+
+.admin-image {
+	width: 300px;
 }
