--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,7 +6,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">The Noob Jobs</a>
+          <a class="navbar-brand" href="#">The Love You Rights</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
