--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,18 +5,21 @@
     <title><%= content_for?(:title) ? yield(:title) : "Bandstand" %></title>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Bandstand" %>">
     <link href='http://fonts.googleapis.com/css?family=Black+Ops+One' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
     <%= stylesheet_link_tag "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
     <%= yield(:head) %>
   </head>
   <body class="<%= controller_name %> <%= action_name %>">
+    <% if user_signed_in? %>
     <div class="container">
     
         
           <%= render 'layouts/navigation' %>
         
     </div>
+    <% end %>
     <div id="main" role="main">
       <div class="container">
         <div class="content">
