--- a/app/assets/stylesheets/bootstrap.css.scss
+++ b/app/assets/stylesheets/bootstrap.css.scss
@@ -306,7 +306,7 @@ body {
   font-size: 14px;
   line-height: 1.428571429;
   color: #333333;
-  background-color: #000;
+  background-color: #000000;
 }
 
 input,
@@ -752,6 +752,7 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  backgroud-color: #000000;
 }
 
 .container:before,
