added js files for IE

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -40,6 +40,11 @@
           <p><%= link_to link.title, link.url, html_options = { :target => '_blank' } %></p>
         <% end %>
       </div>  
+
+      <h2>Twitter Feed</h2>
+      <div class="front-box">
+        <p>Tweet tweet</p>
+      </div>  
     </div>
 
     <div class="col-lg-4">
